style(ui): Covers block fixes (WIP).

--- a/assets/child-theme-main/styles/blocks/_covercards.scss
+++ b/assets/child-theme-main/styles/blocks/_covercards.scss
@@ -1,10 +1,23 @@
-.cover-card {
+.take-action-covers-block {
+  .cover {
+    height: 350px;
+    min-height: 0;
+
+    .cover-card-content {
+      padding: 0;
+    }
+  }
+}
+
+.cover-card.cover, .take-action-covers-block .cover {
   padding: 0;
   transition: none;
   margin-bottom: 40px;
-  // TODO think of a durable solution for shifting the image
-  background-position: center 50px;
+  display: flex;
+  flex-direction: column-reverse;
+  justify-content: flex-end;
   height: 350px;
+  min-height: 0;
   box-shadow: none;
 
   &:before {
@@ -22,7 +35,7 @@
   }
 
   @include large-and-up {
-    height: 100px !important;
+    // height: 100px !important;
   }
 
   p {
@@ -30,6 +43,9 @@
   }
 
   &:hover {
+    .cover-card-btn {
+      display: block;
+    }
     p {
       display: none;
     }
@@ -39,40 +55,47 @@
     display: none;
   }
 
-  .cover-card-content p {
-    display: none;
-  }
-
-  .cover-card-heading {
-    display: inline-block;
-    font-weight: 500;
-    color: $black;
-    background: $white;
-    width: 100%;
+  .cover-card-content {
+    padding: 0;
     margin: 0;
-    padding: $sm;
-    height: 110px;
-    max-width: 100%;
-    min-height: 100px;
-    border-top: 4px solid $light-green;
-    text-decoration: none;
-    text-shadow: none;
+    height: 100%;
 
-    &:hover {
-      color: $hover-green;
+    p {
+      display: none;
+    }
+
+    .cover-card-heading {
+      display: inline-block;
+      font-weight: 500;
+      color: $black;
+      background: $white;
+      width: 100%;
+      margin: 0;
+      padding: $sm;
+      max-width: 100%;
+      min-height: 100px;
+      border-top: 4px solid $light-green;
+      text-decoration: none;
+      text-shadow: none;
+
+      &:hover {
+        color: $hover-green;
+      }
     }
   }
 
   .cover-card-btn {
+    display: none;
     position: absolute;
     bottom: -36px;
-    left: auto;
+    left: 20px;
     cursor: pointer;
-    height: auto;
+    font-size: 1em;
     background: $blood-orange;
     right: 20px;
     border: none;
     text-transform: none;
+    z-index: 10;
 
     &:hover {
       background: $hover-orange;
