--- a/assets/child-theme-main/styles/components/_buttons.scss
+++ b/assets/child-theme-main/styles/components/_buttons.scss
@@ -1,7 +1,10 @@
 .btn {
   font-weight: 500;
+  font-size: 1em;
   border-radius: 0;
   text-transform: uppercase;
+  height: 48px;
+  line-height: 48px;
 }
 
 .top-navigation .btn-donate {
